<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FinanceFlow</string>
    <string name="title_lancamento">Novo Lançamento</string>
    <string name="title_extrato">Extrato</string>
    <string name="label_valor">Valor (R$)</string>
    <string name="hint_valor">0,00</string>
    <string name="label_descricao">Descrição</string>
    <string name="hint_descricao">Ex: Aluguel, Salário</string>
    <string name="label_data">Data</string>
    <string name="hint_data">Selecione a data</string>
    <string name="label_tipo">Tipo de movimentação</string>
    <string name="tipo_receita">Receita (Crédito)</string>
    <string name="tipo_despesa">Despesa (Débito)</string>
    <string name="legend_receita">Receita (Crédito)</string>
    <string name="legend_despesa">Despesa (Débito)</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_ver_extrato">Ver Extrato</string>
    <string name="erro_valor_obrigatorio">Informe um valor válido</string>
    <string name="erro_descricao_obrigatoria">A descrição é obrigatória</string>
    <string name="erro_data_obrigatoria">Selecione uma data</string>
    <string name="msg_lancamento_salvo">Lançamento salvo com sucesso</string>
    <string name="label_saldo_total">Saldo Total</string>
    <string name="label_lista_vazia">Nenhum lançamento registrado ainda</string>
    <string name="cd_icone_tipo">Ícone indicando tipo de movimentação</string>
    <string name="cd_alternar_tema">Alternar tema</string>
    <string name="tema_claro">Tema: Sempre Claro</string>
    <string name="tema_escuro">Tema: Sempre Escuro</string>
    <string name="tema_sistema">Tema: Automático (Sistema)</string>
    <string name="r_0_00">R$ 0,00</string>
</resources>
